// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Phylogram component Tree from inputTree with different branch key works 1`] = `
<div
  id="phylogram"
>
  <svgpanzoom-stub
    center="true"
    dblclickzoomenabled="true"
    fit="true"
    maxzoom="50"
    minzoom="0.5"
    mousewheelzoomenabled="true"
    panenabled="true"
    preventmouseeventsdefault="true"
    refreshrate="auto"
    style="width: 600px; height: 400px;"
    viewportselector=".svg-pan-zoom_viewport"
    zoomenabled="true"
    zoomscalesensitivity="0.2"
  >
    <svg
      height="400"
      id="svgphylo"
      width="600"
    >
      <g
        id="groupphylo"
        transform="translate(10,10)"
      >
        <g
          transform="translate(10, 10)"
        >
          <link-stub
            rightAngle="true"
            source="[object Object]"
            stroke="black"
            strokeWidth="2.5"
            target="[object Object]"
          />
          <link-stub
            rightAngle="true"
            source="[object Object]"
            stroke="black"
            strokeWidth="2.5"
            target="[object Object]"
          />
          <link-stub
            rightAngle="true"
            source="[object Object]"
            stroke="black"
            strokeWidth="2.5"
            target="[object Object]"
          />
          <link-stub
            rightAngle="true"
            source="[object Object]"
            stroke="black"
            strokeWidth="2.5"
            target="[object Object]"
          />
          <link-stub
            rightAngle="true"
            source="[object Object]"
            stroke="black"
            strokeWidth="2.5"
            target="[object Object]"
          />
          <link-stub
            rightAngle="true"
            source="[object Object]"
            stroke="black"
            strokeWidth="2.5"
            target="[object Object]"
          />
          <link-stub
            rightAngle="true"
            source="[object Object]"
            stroke="black"
            strokeWidth="2.5"
            target="[object Object]"
          />
          <link-stub
            rightAngle="true"
            source="[object Object]"
            stroke="black"
            strokeWidth="2.5"
            target="[object Object]"
          />
        </g>
         
        <g
          transform="translate(10, 10)"
        >
          <node-stub
            fill="greenyellow"
            id="ABCDE"
            show="true"
            size="10"
            strokeColor="darkblue"
            x="253.5"
            y="0"
          />
          <node-stub
            fill="lightsalmon"
            id="ABCD"
            size="10"
            strokeColor="darkblue"
            x="156"
            y="88.8888888888889"
          />
          <node-stub
            fill="lightsalmon"
            id="AB"
            size="10"
            strokeColor="darkblue"
            x="78"
            y="222.22222222222223"
          />
          <node-stub
            fill="lightsalmon"
            id="CD"
            size="10"
            strokeColor="darkblue"
            x="234"
            y="177.7777777777778"
          />
          <node-stub
            fill="steelblue"
            id="E"
            show="true"
            size="10"
            strokeColor="darkblue"
            x="351"
            y="311.1111111111111"
          />
          <node-stub
            fill="steelblue"
            id="A"
            show="true"
            size="10"
            strokeColor="darkblue"
            x="39"
            y="311.1111111111111"
          />
          <node-stub
            fill="steelblue"
            id="B"
            show="true"
            size="10"
            strokeColor="darkblue"
            x="117"
            y="355.5555555555556"
          />
          <node-stub
            fill="steelblue"
            id="C"
            show="true"
            size="10"
            strokeColor="darkblue"
            x="195"
            y="400"
          />
          <node-stub
            fill="steelblue"
            id="D"
            show="true"
            size="10"
            strokeColor="darkblue"
            x="273"
            y="311.1111111111111"
          />
        </g>
         
        <g
          transform="translate(10, 10)"
        >
          <label-stub
            background=""
            borderColor="black"
            borderWidth="0"
            color="black"
            fontWeight="normal"
            id="E"
            label="E"
            offsetX="15"
            size="10"
            x="351"
            y="331.1111111111111"
          />
          <label-stub
            background=""
            borderColor="black"
            borderWidth="0"
            color="black"
            fontWeight="normal"
            id="A"
            label="A"
            offsetX="15"
            size="10"
            x="39"
            y="331.1111111111111"
          />
          <label-stub
            background=""
            borderColor="black"
            borderWidth="0"
            color="black"
            fontWeight="normal"
            id="B"
            label="B"
            offsetX="15"
            size="10"
            x="117"
            y="375.5555555555556"
          />
          <label-stub
            background=""
            borderColor="black"
            borderWidth="0"
            color="black"
            fontWeight="normal"
            id="C"
            label="C"
            offsetX="15"
            size="10"
            x="195"
            y="420"
          />
          <label-stub
            background=""
            borderColor="black"
            borderWidth="0"
            color="black"
            fontWeight="normal"
            id="D"
            label="D"
            offsetX="15"
            size="10"
            x="273"
            y="331.1111111111111"
          />
        </g>
         
        <!---->
         
        <!---->
         
        <!---->
      </g>
    </svg>
  </svgpanzoom-stub>
</div>
`;

exports[`Phylogram component Tree from inputTree with different length key works 1`] = `
<div
  id="phylogram"
>
  <svgpanzoom-stub
    center="true"
    dblclickzoomenabled="true"
    fit="true"
    maxzoom="50"
    minzoom="0.5"
    mousewheelzoomenabled="true"
    panenabled="true"
    preventmouseeventsdefault="true"
    refreshrate="auto"
    style="width: 600px; height: 400px;"
    viewportselector=".svg-pan-zoom_viewport"
    zoomenabled="true"
    zoomscalesensitivity="0.2"
  >
    <svg
      height="400"
      id="svgphylo"
      width="600"
    >
      <g
        id="groupphylo"
        transform="translate(10,10)"
      >
        <g
          transform="translate(10, 10)"
        >
          <link-stub
            rightAngle="true"
            source="[object Object]"
            stroke="black"
            strokeWidth="2.5"
            target="[object Object]"
          />
          <link-stub
            rightAngle="true"
            source="[object Object]"
            stroke="black"
            strokeWidth="2.5"
            target="[object Object]"
          />
          <link-stub
            rightAngle="true"
            source="[object Object]"
            stroke="black"
            strokeWidth="2.5"
            target="[object Object]"
          />
          <link-stub
            rightAngle="true"
            source="[object Object]"
            stroke="black"
            strokeWidth="2.5"
            target="[object Object]"
          />
          <link-stub
            rightAngle="true"
            source="[object Object]"
            stroke="black"
            strokeWidth="2.5"
            target="[object Object]"
          />
          <link-stub
            rightAngle="true"
            source="[object Object]"
            stroke="black"
            strokeWidth="2.5"
            target="[object Object]"
          />
          <link-stub
            rightAngle="true"
            source="[object Object]"
            stroke="black"
            strokeWidth="2.5"
            target="[object Object]"
          />
          <link-stub
            rightAngle="true"
            source="[object Object]"
            stroke="black"
            strokeWidth="2.5"
            target="[object Object]"
          />
        </g>
         
        <g
          transform="translate(10, 10)"
        >
          <node-stub
            fill="greenyellow"
            id="ABCDE"
            show="true"
            size="10"
            strokeColor="darkblue"
            x="253.5"
            y="0"
          />
          <node-stub
            fill="lightsalmon"
            id="ABCD"
            size="10"
            strokeColor="darkblue"
            x="156"
            y="88.8888888888889"
          />
          <node-stub
            fill="lightsalmon"
            id="AB"
            size="10"
            strokeColor="darkblue"
            x="78"
            y="222.22222222222223"
          />
          <node-stub
            fill="lightsalmon"
            id="CD"
            size="10"
            strokeColor="darkblue"
            x="234"
            y="177.7777777777778"
          />
          <node-stub
            fill="steelblue"
            id="E"
            show="true"
            size="10"
            strokeColor="darkblue"
            x="351"
            y="311.1111111111111"
          />
          <node-stub
            fill="steelblue"
            id="A"
            show="true"
            size="10"
            strokeColor="darkblue"
            x="39"
            y="311.1111111111111"
          />
          <node-stub
            fill="steelblue"
            id="B"
            show="true"
            size="10"
            strokeColor="darkblue"
            x="117"
            y="355.5555555555556"
          />
          <node-stub
            fill="steelblue"
            id="C"
            show="true"
            size="10"
            strokeColor="darkblue"
            x="195"
            y="400"
          />
          <node-stub
            fill="steelblue"
            id="D"
            show="true"
            size="10"
            strokeColor="darkblue"
            x="273"
            y="311.1111111111111"
          />
        </g>
         
        <g
          transform="translate(10, 10)"
        >
          <label-stub
            background=""
            borderColor="black"
            borderWidth="0"
            color="black"
            fontWeight="normal"
            id="E"
            label="E"
            offsetX="15"
            size="10"
            x="351"
            y="331.1111111111111"
          />
          <label-stub
            background=""
            borderColor="black"
            borderWidth="0"
            color="black"
            fontWeight="normal"
            id="A"
            label="A"
            offsetX="15"
            size="10"
            x="39"
            y="331.1111111111111"
          />
          <label-stub
            background=""
            borderColor="black"
            borderWidth="0"
            color="black"
            fontWeight="normal"
            id="B"
            label="B"
            offsetX="15"
            size="10"
            x="117"
            y="375.5555555555556"
          />
          <label-stub
            background=""
            borderColor="black"
            borderWidth="0"
            color="black"
            fontWeight="normal"
            id="C"
            label="C"
            offsetX="15"
            size="10"
            x="195"
            y="420"
          />
          <label-stub
            background=""
            borderColor="black"
            borderWidth="0"
            color="black"
            fontWeight="normal"
            id="D"
            label="D"
            offsetX="15"
            size="10"
            x="273"
            y="331.1111111111111"
          />
        </g>
         
        <!---->
         
        <!---->
         
        <!---->
      </g>
    </svg>
  </svgpanzoom-stub>
</div>
`;

exports[`Phylogram component Tree from inputTree works 1`] = `
<div
  id="phylogram"
>
  <svgpanzoom-stub
    center="true"
    dblclickzoomenabled="true"
    fit="true"
    maxzoom="50"
    minzoom="0.5"
    mousewheelzoomenabled="true"
    panenabled="true"
    preventmouseeventsdefault="true"
    refreshrate="auto"
    style="width: 600px; height: 400px;"
    viewportselector=".svg-pan-zoom_viewport"
    zoomenabled="true"
    zoomscalesensitivity="0.2"
  >
    <svg
      height="400"
      id="svgphylo"
      width="600"
    >
      <g
        id="groupphylo"
        transform="translate(10,10)"
      >
        <g
          transform="translate(10, 10)"
        >
          <link-stub
            rightAngle="true"
            source="[object Object]"
            stroke="black"
            strokeWidth="2.5"
            target="[object Object]"
          />
          <link-stub
            rightAngle="true"
            source="[object Object]"
            stroke="black"
            strokeWidth="2.5"
            target="[object Object]"
          />
          <link-stub
            rightAngle="true"
            source="[object Object]"
            stroke="black"
            strokeWidth="2.5"
            target="[object Object]"
          />
          <link-stub
            rightAngle="true"
            source="[object Object]"
            stroke="black"
            strokeWidth="2.5"
            target="[object Object]"
          />
          <link-stub
            rightAngle="true"
            source="[object Object]"
            stroke="black"
            strokeWidth="2.5"
            target="[object Object]"
          />
          <link-stub
            rightAngle="true"
            source="[object Object]"
            stroke="black"
            strokeWidth="2.5"
            target="[object Object]"
          />
          <link-stub
            rightAngle="true"
            source="[object Object]"
            stroke="black"
            strokeWidth="2.5"
            target="[object Object]"
          />
          <link-stub
            rightAngle="true"
            source="[object Object]"
            stroke="black"
            strokeWidth="2.5"
            target="[object Object]"
          />
        </g>
         
        <g
          transform="translate(10, 10)"
        >
          <node-stub
            fill="greenyellow"
            id="ABCDE"
            show="true"
            size="10"
            strokeColor="darkblue"
            x="253.5"
            y="0"
          />
          <node-stub
            fill="lightsalmon"
            id="ABCD"
            size="10"
            strokeColor="darkblue"
            x="156"
            y="88.8888888888889"
          />
          <node-stub
            fill="lightsalmon"
            id="AB"
            size="10"
            strokeColor="darkblue"
            x="78"
            y="222.22222222222223"
          />
          <node-stub
            fill="lightsalmon"
            id="CD"
            size="10"
            strokeColor="darkblue"
            x="234"
            y="177.7777777777778"
          />
          <node-stub
            fill="steelblue"
            id="E"
            show="true"
            size="10"
            strokeColor="darkblue"
            x="351"
            y="311.1111111111111"
          />
          <node-stub
            fill="steelblue"
            id="A"
            show="true"
            size="10"
            strokeColor="darkblue"
            x="39"
            y="311.1111111111111"
          />
          <node-stub
            fill="steelblue"
            id="B"
            show="true"
            size="10"
            strokeColor="darkblue"
            x="117"
            y="355.5555555555556"
          />
          <node-stub
            fill="steelblue"
            id="C"
            show="true"
            size="10"
            strokeColor="darkblue"
            x="195"
            y="400"
          />
          <node-stub
            fill="steelblue"
            id="D"
            show="true"
            size="10"
            strokeColor="darkblue"
            x="273"
            y="311.1111111111111"
          />
        </g>
         
        <g
          transform="translate(10, 10)"
        >
          <label-stub
            background=""
            borderColor="black"
            borderWidth="0"
            color="black"
            fontWeight="normal"
            id="E"
            label="E"
            offsetX="15"
            size="10"
            x="351"
            y="331.1111111111111"
          />
          <label-stub
            background=""
            borderColor="black"
            borderWidth="0"
            color="black"
            fontWeight="normal"
            id="A"
            label="A"
            offsetX="15"
            size="10"
            x="39"
            y="331.1111111111111"
          />
          <label-stub
            background=""
            borderColor="black"
            borderWidth="0"
            color="black"
            fontWeight="normal"
            id="B"
            label="B"
            offsetX="15"
            size="10"
            x="117"
            y="375.5555555555556"
          />
          <label-stub
            background=""
            borderColor="black"
            borderWidth="0"
            color="black"
            fontWeight="normal"
            id="C"
            label="C"
            offsetX="15"
            size="10"
            x="195"
            y="420"
          />
          <label-stub
            background=""
            borderColor="black"
            borderWidth="0"
            color="black"
            fontWeight="normal"
            id="D"
            label="D"
            offsetX="15"
            size="10"
            x="273"
            y="331.1111111111111"
          />
        </g>
         
        <!---->
         
        <!---->
         
        <!---->
      </g>
    </svg>
  </svgpanzoom-stub>
</div>
`;

exports[`Phylogram component Tree from newick works 1`] = `
<div
  id="phylogram"
>
  <svgpanzoom-stub
    center="true"
    dblclickzoomenabled="true"
    fit="true"
    maxzoom="50"
    minzoom="0.5"
    mousewheelzoomenabled="true"
    panenabled="true"
    preventmouseeventsdefault="true"
    refreshrate="auto"
    style="width: 600px; height: 400px;"
    viewportselector=".svg-pan-zoom_viewport"
    zoomenabled="true"
    zoomscalesensitivity="0.2"
  >
    <svg
      height="400"
      id="svgphylo"
      width="600"
    >
      <g
        id="groupphylo"
        transform="translate(10,10)"
      >
        <g
          transform="translate(10, 10)"
        >
          <link-stub
            rightAngle="true"
            source="[object Object]"
            stroke="black"
            strokeWidth="2.5"
            target="[object Object]"
          />
          <link-stub
            rightAngle="true"
            source="[object Object]"
            stroke="black"
            strokeWidth="2.5"
            target="[object Object]"
          />
          <link-stub
            rightAngle="true"
            source="[object Object]"
            stroke="black"
            strokeWidth="2.5"
            target="[object Object]"
          />
          <link-stub
            rightAngle="true"
            source="[object Object]"
            stroke="black"
            strokeWidth="2.5"
            target="[object Object]"
          />
          <link-stub
            rightAngle="true"
            source="[object Object]"
            stroke="black"
            strokeWidth="2.5"
            target="[object Object]"
          />
          <link-stub
            rightAngle="true"
            source="[object Object]"
            stroke="black"
            strokeWidth="2.5"
            target="[object Object]"
          />
          <link-stub
            rightAngle="true"
            source="[object Object]"
            stroke="black"
            strokeWidth="2.5"
            target="[object Object]"
          />
          <link-stub
            rightAngle="true"
            source="[object Object]"
            stroke="black"
            strokeWidth="2.5"
            target="[object Object]"
          />
        </g>
         
        <g
          transform="translate(10, 10)"
        >
          <node-stub
            fill="greenyellow"
            id="node11"
            show="true"
            size="10"
            strokeColor="darkblue"
            x="253.5"
            y="200"
          />
          <node-stub
            fill="lightsalmon"
            id="node8"
            size="10"
            strokeColor="darkblue"
            x="156"
            y="260"
          />
          <node-stub
            fill="lightsalmon"
            id="node2"
            size="10"
            strokeColor="darkblue"
            x="78"
            y="320"
          />
          <node-stub
            fill="lightsalmon"
            id="node6"
            size="10"
            strokeColor="darkblue"
            x="234"
            y="300"
          />
          <node-stub
            fill="steelblue"
            id="E"
            show="true"
            size="10"
            strokeColor="darkblue"
            x="351"
            y="340"
          />
          <node-stub
            fill="steelblue"
            id="A"
            show="true"
            size="10"
            strokeColor="darkblue"
            x="39"
            y="360"
          />
          <node-stub
            fill="steelblue"
            id="B"
            show="true"
            size="10"
            strokeColor="darkblue"
            x="117"
            y="380"
          />
          <node-stub
            fill="steelblue"
            id="C"
            show="true"
            size="10"
            strokeColor="darkblue"
            x="195"
            y="400"
          />
          <node-stub
            fill="steelblue"
            id="D"
            show="true"
            size="10"
            strokeColor="darkblue"
            x="273"
            y="360"
          />
        </g>
         
        <g
          transform="translate(10, 10)"
        >
          <label-stub
            background=""
            borderColor="black"
            borderWidth="0"
            color="black"
            fontWeight="normal"
            id="E"
            label="E"
            offsetX="15"
            size="10"
            x="351"
            y="360"
          />
          <label-stub
            background=""
            borderColor="black"
            borderWidth="0"
            color="black"
            fontWeight="normal"
            id="A"
            label="A"
            offsetX="15"
            size="10"
            x="39"
            y="380"
          />
          <label-stub
            background=""
            borderColor="black"
            borderWidth="0"
            color="black"
            fontWeight="normal"
            id="B"
            label="B"
            offsetX="15"
            size="10"
            x="117"
            y="400"
          />
          <label-stub
            background=""
            borderColor="black"
            borderWidth="0"
            color="black"
            fontWeight="normal"
            id="C"
            label="C"
            offsetX="15"
            size="10"
            x="195"
            y="420"
          />
          <label-stub
            background=""
            borderColor="black"
            borderWidth="0"
            color="black"
            fontWeight="normal"
            id="D"
            label="D"
            offsetX="15"
            size="10"
            x="273"
            y="380"
          />
        </g>
         
        <!---->
         
        <!---->
         
        <!---->
      </g>
    </svg>
  </svgpanzoom-stub>
</div>
`;

exports[`Phylogram component does not render if no props inputTree or newick 1`] = `
<div
  id="phylogram"
>
  <svgpanzoom-stub
    center="true"
    dblclickzoomenabled="true"
    fit="true"
    maxzoom="50"
    minzoom="0.5"
    mousewheelzoomenabled="true"
    panenabled="true"
    preventmouseeventsdefault="true"
    refreshrate="auto"
    style="width: 600px; height: 400px;"
    viewportselector=".svg-pan-zoom_viewport"
    zoomenabled="true"
    zoomscalesensitivity="0.2"
  >
    <!---->
  </svgpanzoom-stub>
</div>
`;
